<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.activities.ForgotPasswordActivity">

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/activity_forgot_password__guidelineLeft"
        android:layout_width="0dp"
        android:layout_height="match_parent"
        android:orientation="vertical"
        app:layout_constraintGuide_begin="22dp" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/activity_forgot_password__guidelineRight"
        android:layout_width="0dp"
        android:layout_height="match_parent"
        android:orientation="vertical"
        app:layout_constraintGuide_end="22dp" />

    <ImageView
        android:id="@+id/activity_forgot_password__logo"
        style="@style/logoImage"
        android:layout_marginTop="20dp"
        app:layout_constraintStart_toEndOf="@id/activity_forgot_password__guidelineLeft"
        app:layout_constraintTop_toTopOf="parent" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/activity_forgot_password__back_btn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:backgroundTint="#fff"
        android:drawableLeft="@drawable/baseline_keyboard_backspace_black_24"
        android:fontFamily="@font/rubik_medium"
        android:paddingHorizontal="0dp"
        android:stateListAnimator="@null"
        android:text="@string/back_btn"
        android:textAllCaps="false"
        android:textColor="#232323"
        android:textSize="18sp"
        app:layout_constraintStart_toEndOf="@id/activity_forgot_password__guidelineLeft"
        app:layout_constraintTop_toBottomOf="@id/activity_forgot_password__logo"
        android:onClick="backBtnOnClickListener"/>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@id/activity_forgot_password__guidelineRight"
        app:layout_constraintStart_toEndOf="@id/activity_forgot_password__guidelineLeft"
        app:layout_constraintTop_toTopOf="parent"
        android:paddingTop="80dp">

        <TextView
            android:id="@+id/activity_forgot_password__header"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="16dp"
            android:fontFamily="@font/rubik_medium"
            android:text="@string/forgot_password"
            android:textColor="#232323"
            android:textSize="24sp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/activity_forgot_password__warning_message_block"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"
            android:background="@drawable/warning_message_background"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/activity_forgot_password__header">

            <ImageView
                android:id="@+id/activity_forgot_password__warning_icon"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:layout_marginTop="16dp"
                android:layout_marginEnd="16dp"
                android:layout_marginBottom="16dp"
                android:src="@drawable/ic_warning"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/activity_forgot_password__warning_text"
                style="@style/messageText"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="10dp"
                android:layout_marginTop="16dp"
                android:layout_marginEnd="16dp"
                android:layout_marginBottom="16dp"
                android:text="@string/forgot_password_warning_msg"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toEndOf="@id/activity_forgot_password__warning_icon"
                app:layout_constraintTop_toTopOf="parent" />

            <ImageView
                android:id="@+id/activity_forgot_password__cross_btn"
                android:layout_width="30dp"
                android:layout_height="30dp"
                android:scaleType="center"
                android:src="@drawable/ic_cross"
                android:visibility="gone"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

        </androidx.constraintlayout.widget.ConstraintLayout>

        <EditText
            android:id="@+id/activity_forgot_password__email_field"
            style="@style/field"
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:layout_marginTop="10dp"
            android:hint="@string/email"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/activity_forgot_password__warning_message_block"/>

        <TextView
            android:id="@+id/activity_forgot_password__email_warning"
            style="@style/errorMsg"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_gravity="start"
            android:layout_weight="55"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@id/activity_forgot_password__email_field"/>

        <com.google.android.material.button.MaterialButton
            android:id="@+id/activity_forgot_password__reset_btn"
            style="@style/GreenButton"
            android:layout_width="250dp"
            android:layout_height="55dp"
            android:layout_gravity="center"
            android:layout_marginTop="30dp"
            android:text="@string/reset_password"
            app:layout_constraintTop_toBottomOf="@id/activity_forgot_password__email_warning"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            android:onClick="resetBtnOnClickListener"/>

    </androidx.constraintlayout.widget.ConstraintLayout>

    <ProgressBar
        android:id="@+id/activity_forgot_password__progress_bar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        android:indeterminateDrawable="@drawable/progress"
        android:visibility="gone"/>

</androidx.constraintlayout.widget.ConstraintLayout>