<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:card_view="http://schemas.android.com/tools"
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    >

    <androidx.cardview.widget.CardView
        android:id="@+id/recipe_row__day_card"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:cardElevation="5dp"
        app:cardCornerRadius="10dp"
        android:layout_marginVertical="10dp"
        android:layout_marginHorizontal="22dp"
        >

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/recipe_row__recipe"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:paddingVertical="15dp"
            android:paddingHorizontal="20dp">

            <androidx.constraintlayout.widget.ConstraintLayout
                android:id="@+id/recipe_row__header_wrapper"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent">

                <TextView
                    android:id="@+id/recipe_row__recipe_name"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:textColor="@color/black_text"
                    android:textSize="16sp"
                    android:fontFamily="@font/rubik_medium"
                    android:text="Recipe name name name name"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toStartOf="@id/recipe_row__num_calories"
                    android:layout_marginEnd="10dp"
                    />

                <TextView
                    android:id="@+id/recipe_row__num_calories"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textColor="@color/blue_text"
                    android:layout_centerHorizontal="true"
                    android:textSize="16sp"
                    android:fontFamily="@font/rubik_medium"
                    android:text="1234 ККАЛ"
                    app:layout_constraintEnd_toStartOf="@id/recipe_row__main_arrow"
                    app:layout_constraintTop_toTopOf="parent"
                    app:layout_constraintBottom_toBottomOf="parent"
                    android:layout_marginEnd="10dp"
                    />

                <ImageView
                    android:id="@+id/recipe_row__main_arrow"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:src="@drawable/ic_arrow"
                    android:layout_alignParentEnd="true"
                    android:scaleType="center"
                    android:layout_marginTop="5dp"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintTop_toTopOf="parent"
                    app:layout_constraintBottom_toBottomOf="parent"
                    android:layout_marginBottom="3dp"
                    />

            </androidx.constraintlayout.widget.ConstraintLayout>

            <TextView
                android:id="@+id/recipe_row__what_need"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:layout_constraintTop_toBottomOf="@id/recipe_row__header_wrapper"
                android:layout_marginTop="10dp"
                android:text="@string/what_need"
                android:fontFamily="@font/rubik_medium"
                android:textSize="16sp"
                android:textColor="@color/black_text"
                />

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/recipe_row__ingredients_recycler"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:layout_constraintTop_toBottomOf="@id/recipe_row__what_need"
                android:layout_marginTop="5dp"
                />

            <TextView
                android:id="@+id/recipe_row__how_cook"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:layout_constraintTop_toBottomOf="@id/recipe_row__ingredients_recycler"
                android:layout_marginTop="10dp"
                android:text="@string/how_cook"
                android:fontFamily="@font/rubik_medium"
                android:textSize="16sp"
                android:textColor="@color/black_text"
                />

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/recipe_row__steps_recycler"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:layout_constraintTop_toBottomOf="@id/recipe_row__how_cook"
                android:layout_marginTop="5dp"
                />

            <TextView
                android:id="@+id/recipe_row__advice"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:layout_constraintTop_toBottomOf="@id/recipe_row__steps_recycler"
                android:layout_marginTop="10dp"
                android:text="@string/advice_header"
                android:fontFamily="@font/rubik_medium"
                android:textSize="16sp"
                android:textColor="@color/black_text"
                android:visibility="gone"
                />

            <TextView
                android:id="@+id/recipe_row__advice_content"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:layout_constraintTop_toBottomOf="@id/recipe_row__advice"
                android:fontFamily="@font/rubik_regular"
                android:textSize="14sp"
                android:textColor="@color/black_text"
                android:layout_marginStart="20dp"
                android:visibility="gone"
                android:layout_marginTop="5dp"
                />

        </androidx.constraintlayout.widget.ConstraintLayout>

    </androidx.cardview.widget.CardView>

    <View
        android:layout_width="match_parent"
        android:layout_height="10dp"
        app:layout_constraintTop_toBottomOf="@id/recipe_row__day_card"/>

</androidx.constraintlayout.widget.ConstraintLayout>

